# seqgen

./: Cargo.toml  README.md  build.rs
examples/: basic_bench.rs  fib_seq.rs  from_iter.rs  infinite_iter.rs  range_of_seq.rs  xy_seq.rs
src/: error.rs  lib.rs  prelude.rs  sequence.rs  sequence_generator.rs
src/sequence/: error.rs  mod.rs  sequence_iter.rs  states.rs  types.rs
src/sequence/sequence_part/: mod.rs  states.rs
src/sequence_part/: error.rs  mod.rs  states.rs  types.rs
